# cgs-led

./: .gitignore  .gitmodules  README.md
CgsLed/: CgsLed.sln
CgsLed/CgsLedConsole/: CgsLedConsole.csproj
CgsLed/CgsLedConsole/src/: BinaryWriterExtensions.cs  CommandNode.cs  IpcContext.cs  Program.cs
CgsLed/CgsLedController/: CgsLedController.csproj
CgsLed/CgsLedController/src/: BuiltInMode.cs  CustomMode.cs  DataType.cs  LedBuffer.cs  LedController.cs  LedControllerConfig.cs  LedMode.cs  LedWriter.cs  SerialPortLedWriter.cs
CgsLed/CgsLedController/src/Service/: AmbilightConfigType.cs  FftConfigType.cs  MessageType.cs
CgsLed/CgsLedGui/: App.xaml  App.xaml.cs  CgsLedGui.csproj  Package.appxmanifest  README.md  app.manifest
CgsLed/CgsLedGui/Properties/: launchSettings.json
CgsLed/CgsLedGui/src/: MainWindow.xaml  MainWindow.xaml.cs
CgsLed/CgsLedGui/src/Views/: FftPage.xaml  (+25 more)
CgsLed/CgsLedService/: CgsLedService.csproj  MoreMath.cs  Program.cs  WasapiProcessLoopbackCapture.cs
CgsLed/CgsLedService/src/: AppCaptureThingy.cs  BinaryReaderExtensions.cs  IpcContext.cs  IpcLedWriter.cs  MusicColors.cs  Perlin.cs  Program.cs
CgsLed/CgsLedServiceTypes/: CgsLedServiceTypes.csproj
CgsLed/CgsLedServiceTypes/src/: ConfigFile.cs  MessageType.cs  MusicColors.cs
CgsLedArduino/: platformio.ini
CgsLedArduino/src/: customLed.old  led.hpp  main.cpp  main.cpp.old  uart.hpp
CgsLedOpenRgb/: .gitignore  CgsLedOpenRgb.cpp  CgsLedOpenRgb.hpp  CgsLedOpenRgb.pro  CgsLedRgbController.cpp  CgsLedRgbController.hpp  build.bat  build2.bat
CgsLedOpenRgb/debian/: changelog.in  control  copyright
CgsLedOpenRgb/scripts/: build-package-files.sh
CgsLedPiPico/: CMakeLists.txt  audio.cpp  audio.hpp  main.cpp  speaker.pio  ws2812.pio
(+36 files in other folders)
